--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,9 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_port = /dev/cu.usbserial-40110
+upload_port = COM4
 upload_speed = 460800
-monitor_port = /dev/cu.usbserial-40110
+monitor_port = COM4
 monitor_speed = 115200
 lib_deps = 
 	me-no-dev/ESPAsyncTCP@^1.2.2
