--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.1.0
 	adafruit/Adafruit SHT31 Library@^2.0.0
 	adafruit/Adafruit CCS811 Library@^1.1.1
+	wifwaf/MH-Z19@^1.5.3
 board_build.filesystem = littlefs
-
-build_flags =
-  -I /Users/ekleinhans/PlatfromIO
+build_flags = 
+	-I /Users/ekleinhans/PlatfromIO
