added BME280 support

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,8 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.1.0
 	adafruit/Adafruit SHT31 Library@^2.0.0
 	wifwaf/MH-Z19@^1.5.3
+	enviromonitor/BME280_Light@0.0.0-alpha+sha.600667f3a6
 board_build.filesystem = littlefs
 build_flags = 
 	-I /Users/ekleinhans/PlatfromIO
+	-DCORE_DEBUG_LEVEL=4
