fixed connectivity issues

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,21 +12,21 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_port = COM5
+upload_port = COM4
 upload_speed = 460800
-monitor_port = COM5
+monitor_port = COM4
 monitor_speed = 115200
 lib_deps = 
 	me-no-dev/ESPAsyncTCP@^1.2.2
 	me-no-dev/ESP Async WebServer@^1.2.3
 	ayushsharma82/AsyncElegantOTA@^2.2.5
 	arduino-libraries/Arduino_JSON@^0.1.0
-	knolleary/PubSubClient@^2.8
 	arduino-libraries/NTPClient@^3.1.0
 	adafruit/Adafruit SHT31 Library@^2.0.0
 	wifwaf/MH-Z19@^1.5.3
 	https://github.com/finitespace/BME280.git
+	256dpi/MQTT@^2.5.0
 board_build.filesystem = littlefs
 build_flags = 
 	-I /Users/ekleinhans/PlatfromIO
-	-DCORE_DEBUG_LEVEL=4
+	-DCORE_DEBUG_LEVEL=0
